@@ -1,7 +1,7 @@
 ---
 abstract: 'Script to generate image.'
 author:
-  - 'Michal Spacek <skim@cpan.org>'
+  - 'Michal Josef Spacek <skim@cpan.org>'
 build_requires:
   ExtUtils::MakeMaker: 6.36
   Test::More: 0
