@@ -74,12 +74,12 @@ REPOSITORY
     <https://github.com/tupinek/App-Image-Generator>
 
 AUTHOR
-    Michal Špaček <mailto:skim@cpan.org>
+    Michal Josef Špaček <mailto:skim@cpan.org>
 
     <http://skim.cz>
 
 LICENSE AND COPYRIGHT
-     © 2015-2016 Michal Špaček
+     © 2015-2016 Michal Josef Špaček
      BSD 2-Clause License
 
 VERSION
